# ta-jepa

./: .gitignore  CLAUDE.md  LICENSE  README.md  RESULTS.md  modal_app.py  pyproject.toml
configs/: actions.yaml  apc_baseline.yaml  codec_encodec.yaml  control.yaml  jepa.yaml  mel_baseline.yaml
docs/: cloud-modal.md  hf-model-card.md  huggingface.md  temporal-audio-jepa-plan.md
scripts/: _bootstrap.py  build_manifest.py  demo_anticipation.py  demo_knobs.py  extract_descriptors.py  extract_embeddings.py  extract_mel.py  make_synthetic_data.py  prepare_esc50.py  prepare_fma.py  prepare_fsd50k.py  run_action_eval.py  run_controllability.py  run_forecast.py  run_probe.py  run_residual_eval.py  train_actions.py  train_ajepa.py  train_apc.py  train_control.py  train_jepa.py  train_residual.py
space/anticipation/: README.md  app.py  requirements.txt
src/tajepa/: __init__.py  config.py  diagnostics.py  extract.py
src/tajepa/codec/: __init__.py  extract.py  frontend.py
src/tajepa/data/: __init__.py  audio_dataset.py  embedding_dataset.py  io.py  manifest.py
src/tajepa/demo/: __init__.py  anticipation.py
src/tajepa/eval/: __init__.py  action_controllability.py  controllability.py  forecasting.py  probe.py  representations.py
src/tajepa/features/: __init__.py  descriptors.py  (+1 more)
tests/: test_action_controllability.py  test_actions.py  test_ajepa.py  test_apc.py  test_codec_frontend.py  test_control.py  test_controllability.py  test_embedding_dataset.py  test_fma.py  test_forecasting.py  test_fsd50k.py  test_jepa.py  test_manifest.py  test_probe.py  test_residual.py
(+9 files in other folders)
